crates/llvmkit-ir/tests/compile_fail/cross_module_branch_target.stderr
error[E0521]: borrowed data escapes outside of closure
  --> tests/compile_fail/cross_module_branch_target.rs:24:21
   |
16 |         let left_target = f.append_basic_block(&left, "target");
   |             ----------- `left_target` declared here, outside of the closure body
17 |
18 |         Module::with_new::<_, _, _>("right", |right| {
   |                                               ----- `right` is a reference that is only valid in the closure body
...
24 |             let _ = builder.build_br(left_target);
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `right` escapes the closure body here
   |
   = note: requirement occurs because of the type `llvmkit_ir::BasicBlock<'_, (), Unterminated, Brand<'_>>`, which makes the generic argument `Brand<'_>` invariant
   = note: the struct `llvmkit_ir::BasicBlock<'ctx, R, Term, B>` is invariant over the parameter `B`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error[E0521]: borrowed data escapes outside of closure
  --> tests/compile_fail/cross_module_branch_target.rs:23:27
   |
12 |     Module::with_new::<_, _, _>("left", |left| {
   |                                          ----
   |                                          |
   |                                          `left` is a reference that is only valid in the closure body
   |                                          has type `Module<'1>`
...
23 |             let builder = IRBuilder::new_for::<()>(&right).position_at_end(entry);
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                           |
   |                           `left` escapes the closure body here
   |                           argument requires that `'1` must outlive `'static`
